syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.springframework.grpc.sample.proto";
option java_outer_classname = "FooProto";

// The greeting service definition.
service FooService {
    // Sends a greeting
    rpc Echo (Hello) returns (Hello) {
    }
    rpc Stream(Input) returns (stream Output) {}
    rpc Process(stream Input) returns (stream Output) {}
}

// The request message containing the user's name.
message Hello {
    string name = 1;
}

message Input {}

message Output {}