syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.springframework.grpc.sample.proto";
option java_outer_classname = "HelloWorldProto";

// The greeting service definition.
service Simple {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloRequest) {
    }
    rpc StreamHello(HelloRequest) returns (stream HelloRequest) {}
    rpc ParallelHello(stream HelloRequest) returns (stream HelloRequest) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}