syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.springframework.grpc.sample.proto";
option java_outer_classname = "EchoProto";

service EchoService {
    rpc Echo (Foo) returns (Foo) {
    }
}

// The request message containing the user's name.
message Foo {
    string name = 1;
	int32 age = 2;
}
